Add metadata summary after upload
Metadata summary is shown after upload, but it's not yet added to
project.

Menu sidebar was removed.

Relates: #53

--- a/web/src/common/css/main.scss
+++ b/web/src/common/css/main.scss
@@ -7,3 +7,16 @@ body {
 .content-container {
   padding: 20px;
 }
+
+.icon-right, .margin-left {
+  margin-left: 10px;
+}
+
+.icon-left, .margin-right {
+  margin-right: 10px;
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+}
