--- a/web/src/common/css/FileUpload.scss
+++ b/web/src/common/css/FileUpload.scss
@@ -1,13 +1,4 @@
-.form-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.form-item {
-    width: 80%;
-    padding: 5px 5px 5px 0;
-}
-
 .form-errors {
     color: red;
+    white-space: pre-wrap;
 }
