--- a/web/src/Project/css/MetadataSummary.scss
+++ b/web/src/Project/css/MetadataSummary.scss
@@ -1,4 +1,15 @@
 .metadata-container {
   background-color: #fafafa;
   padding: 10px;
+
+  .buttons-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .button-link {
+      text-decoration: none;
+    }
+  }
 }
