Add collaborator list to project page with add and remove functionality
Backend has endpoints to list, add and remove collaborators from project.
Project creator is added to collaborator list on project creation and
cannot be removed later.

Project page has collaborator list view with button-dialogs to add and
remove collaborators.

Also refactored project form fields as new component.

Closes: #4 closes: #94, closes: #64, closes: #96, closes: #105

--- a/web/src/Project/css/MetadataSummary.scss
+++ b/web/src/Project/css/MetadataSummary.scss
@@ -1,6 +1,7 @@
 .metadata-container {
   background-color: #fafafa;
   padding: 10px;
+  margin: 12px 0;
 
   .buttons-container {
     display: flex;
