Add more colour to dialogs and tweak tables
UI still needs some work.

Relates: #113, #114, #115

--- a/web/src/common/css/_variables.scss
+++ b/web/src/common/css/_variables.scss
@@ -7,7 +7,7 @@ $light-blue:    #E9F5F8;
 $light-orange:  #FAEFD5;
 $light-gray:    #F3F3F3;
 $hover-blue:    #67AEC1;
-$middle-gray:   #A0A0A0;
+$middle-gray:   #D8D8D8;
 
 // Margins
 $margin:              3%;
