--- a/web/src/common/css/main.scss
+++ b/web/src/common/css/main.scss
@@ -111,31 +111,22 @@ ul a {
 }
 
 h1 {
-   font-family: 'Source Sans Pro', sans-serif;
-   font-weight: 600;
-   letter-spacing: 1px;
-   font-size: 32px;
-   color: $dark-gray;
-   text-transform: uppercase;
-   margin: 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
+  font-size: 32px;
+  color: $dark-gray !important;
+  text-transform: uppercase;
+  margin: 0;
+  overflow-wrap: break-word;
  }
 
 h2 {
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 600;
+  font-weight: 600 !important;
   letter-spacing: 1px;
-  font-size: 24px;
-  color: $dark-gray;
-  text-transform: uppercase;
-  margin: 0;
-}
-
-h3 {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 400;
-  letter-spacing: 1px;
-  font-size: 24px;
-  color: $dark-gray;
+  font-size: 24px !important;
+  color: $dark-gray !important;
   text-transform: uppercase;
   margin: 0;
 }
@@ -218,6 +209,10 @@ td {
     justify-content: space-between;
     align-items: center;
     padding: $card-padding;
+
+    .prevent-overflow {
+      overflow-x: auto;
+    }
   }
 
   .table-card-body {
