Change storage file type, fix dialog bug and disable form buttons

--- a/frontend/src/common/css/main.scss
+++ b/frontend/src/common/css/main.scss
@@ -73,6 +73,10 @@ ul a {
   &:hover {
     background-color: $middle-gray !important;
   }
+
+  &:disabled {
+    color: $middle-gray !important;
+  }
 }
 
 .white-button {
